--- a/Node-Project/package.json
+++ b/Node-Project/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "morgan": "^1.10.1",
+    "winston": "^3.18.3"
   }
 }
